--- a/app/views/pages/index.liquid.haml
+++ b/app/views/pages/index.liquid.haml
@@ -23,14 +23,20 @@ is_layout: false
       .container#content-sections
         #sections-trigger
         .row
-          .col-md-12
-            .row.pinnable-area
-              .col-md-6
-                %img.img-responsive{ src: 'https://placehold.it/560x457' }
-              .col-md-6.sections-text-area
-                #first-section-text.section-text
-                  Sed option torquatos ne, duo sint movet eripuit no, nobis iracundia qui an. Tota latine adipisci pro eu, id vim labore semper nostrud, ad hinc reprehendunt mea. Te nam amet prodesset, at vim mundi suscipit legendos, ut sit integre molestie. No quo albucius deseruisse definitionem, ex dolore expetenda vis, id his tantas numquam. Zril dignissim nec no, usu dicam pertinacia in. Sed option torquatos ne, duo sint movet eripuit no, nobis iracundia qui an. Tota latine adipisci pro eu, id vim labore semper nostrud, ad hinc reprehendunt mea. Te nam amet prodesset, at vim mundi suscipit legendos, ut sit integre molestie. No quo albucius deseruisse definitionem, ex dolore expetenda vis, id his tantas numquam. Zril dignissim nec no, usu dicam pertinacia in.
-
+          .col-md-6
+            .pinnable-area
+              %img.img-responsive{ src: 'https://placehold.it/560x457' }
+          .col-md-6.sections-text-area
+            .row
+              .col-xs-12
+                #section-text-1.section-text
+                  %h2 WE ARE AWESOME
+                #section-text-2.section-text
+                  %h2 YOU CAN BE TOO
+                #section-text-3.section-text
+                  %h2 BUT NOT YET
+                #section-text-4.section-text
+                  %h2 BECAUSE STUFF
 
 
 
