Add in sticky nav

--- a/app/views/pages/index.liquid.haml
+++ b/app/views/pages/index.liquid.haml
@@ -9,16 +9,13 @@ is_layout: false
 %html
   {% include head %}
   %body
+    {% include navbar %}
     .container-fluid
       .hero-outer
         .container-fluid.hero-area.accent-background
           .row
             .col-xs-12
-              %h2.text-center Hero
       .jagged-bottom-out-left
-        &nbsp;
-
-
 
       .container#content-sections
         #sections-trigger
@@ -66,7 +63,7 @@ is_layout: false
           .col-xs-12.col-md-4
             %img.center-block.img-circle{ src: 'https://placehold.it/152x152' }
             %p.text-left Sed option torquatos ne, duo sint movet eripuit no, nobis iracundia qui an. Tota latine adipisci pro eu, id vim labore semper nostrud, ad hinc reprehendunt mea. Te nam amet prodesset, at vim mundi suscipit legendos, ut sit integre molestie. No quo albucius deseruisse definitionem, ex dolore expetenda vis, id his tantas numquam. Zril dignissim nec no, usu dicam pertinacia in.
-      
+
       .container-fluid
         .jagged-top-in-left
         .accent-background
