Add reference URL

--- a/public/stylesheets/application.scss
+++ b/public/stylesheets/application.scss
@@ -1,6 +1,7 @@
 $standard-row-spacing: 40px;
 $accent-background-color: #d1d3d4;
 
+// Based on http://jsbin.com/IfUBAYi/1/edit?html,css,output
 .navbar-center .navbar-inner {
   text-align: center;
 }
