--- a/app/views/snippets/navbar.liquid.haml
+++ b/app/views/snippets/navbar.liquid.haml
@@ -7,12 +7,18 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      %a.navbar-brand{:href => "#"} Brand
+      / %a.navbar-brand{:href => "#"} Brand
     / Collect the nav links, forms, and other content for toggling
     #navbar-collapse.collapse.navbar-collapse
       .navbar-inner
         %ul.nav.navbar-nav{style: 'text-align: center;'}
           %li
-            %a{:href => "#"} Link
+            %a{:href => "#top"} Home
           %li
-            %a{:href => "#"} Link
+            %a{:href => "#about-us"} About Us
+          %li
+            %a{:href => "#new-media"} New Media
+          %li
+            %a{:href => "#big-data"} Big Data
+          %li
+            %a{:href => "#contact"} Contact
