--- a/public/stylesheets/application.scss
+++ b/public/stylesheets/application.scss
@@ -1,14 +1,37 @@
+@import url(https://fonts.googleapis.com/css?family=Nunito:400,700);
+
+body {
+  font-family: 'Nunito', sans-serif;
+}
 $standard-row-spacing: 40px;
 $accent-background-color: #d1d3d4;
+$dark-gray: #312d2e;
+$red: #e44739;
+$blue: #00a9ba;
 
 // Based on http://jsbin.com/IfUBAYi/1/edit?html,css,output
+.navbar-center {
+  height: 100px;
+  background-color: $dark-gray;
+}
+
 .navbar-center .navbar-inner {
   text-align: center;
+  padding-top: 20px;
 }
 
 .navbar-center .navbar-inner .nav {
   display: inline-block;
   float: none;
+  font-size: 25px;
+  a, a:hover, a:visited, a:focus {
+    color: $red !important;
+    background: transparent;
+    text-transform: uppercase;
+  }
+  li {
+    padding-right: 40px;
+  }
 }
 
 .hero-outer {
@@ -16,7 +39,11 @@ $accent-background-color: #d1d3d4;
 }
 
 .hero-area {
-  height: 100%;
+  height: 80vmin;
+}
+
+.hero-contents {
+  padding-top: 45vh;
 }
 
 // Remove outside margins
@@ -54,6 +81,10 @@ $accent-background-color: #d1d3d4;
   background-image: url('/images/jagged-bottom-out-right.svg');
 }
 
+.dark-background {
+  background-color: $dark-gray;
+}
+
 .row.margin-bottom {
   margin: (.5 * $standard-row-spacing) 0;
 }
@@ -61,7 +92,12 @@ $accent-background-color: #d1d3d4;
 .pinnable-area {
   position: relative;
   max-height: 457px;
-  border: 1px solid black;
+}
+
+#hero {
+  .row {
+    height:100%;
+  }
 }
 
 
@@ -69,13 +105,23 @@ $accent-background-color: #d1d3d4;
   .sections-text-area {
     .section-text {
       opacity: 0;
-      margin-top: 100vh;
+      margin-top: 40vh;
       margin-bottom: 50vh;
+      &:last-child {
+        margin-bottom: 10vh;
+      }
     }
   }
 }
 
+.scene-image {
+  opacity: 0;
+}
+
 @media (max-width: 991px) {
+  .scene-image {
+    opacity: 1;
+  }
   .sections-text-area {
     .show-mobile {
       opacity: 1 !important;
@@ -90,4 +136,15 @@ $accent-background-color: #d1d3d4;
       margin-bottom: 10vh !important;
     }
   }
+}
+
+// type
+
+h2 {
+  color: $blue;
+  text-transform: uppercase;
+}
+
+h3 {
+  color: $red;
 }
