Nav logo treatment, fixup form

--- a/app/views/pages/index.liquid.haml
+++ b/app/views/pages/index.liquid.haml
@@ -84,9 +84,9 @@ is_layout: false
         .accent-background
           #contact.container.form-area
             .row
-              .col-xs-12.col-md-6
-                %h2 Let's get in touch
-              .col-xs-12.col-md-6
+              .col-xs-12.col-md-5
+                %h2.form-introduction-text Let's get in touch
+              .col-xs-12.col-md-6.col-md-offset-1
                 {% include contact-form %}
         .jagged-bottom-out-left.dark-background
 
