--- a/app/views/snippets/navbar.liquid.haml
+++ b/app/views/snippets/navbar.liquid.haml
@@ -13,12 +13,15 @@
       .navbar-inner
         %ul.nav.navbar-nav{style: 'text-align: center;'}
           %li
-            %a{:href => "#top"} Home
+            %a#nav-logo{ :href => "#top" }
+              %img.img-responsive{ src: "/images/icons/reach-hearts-icon.svg " }
           %li
-            %a{:href => "#about-us"} About Us
+            %a{ :href => "#top" } Home
           %li
-            %a{:href => "#new-media"} New Media
+            %a{ :href => "#about-us" } About Us
           %li
-            %a{:href => "#big-data"} Big Data
+            %a{ :href => "#new-media" } New Media
           %li
-            %a{:href => "#contact"} Contact
+            %a{ :href => "#big-data" } Big Data
+          %li
+            %a{ :href => "#contact" } Contact
