--- a/public/stylesheets/application.scss
+++ b/public/stylesheets/application.scss
@@ -15,6 +15,15 @@ $blue: #00a9ba;
   background-color: $dark-gray;
 }
 
+#nav-logo {
+  opacity: 0;
+  img {
+    margin-top: -10px;
+    height: 50px !important;
+  }
+
+}
+
 .navbar-center .navbar-inner {
   text-align: center;
   padding-top: 20px;
@@ -112,6 +121,11 @@ $blue: #00a9ba;
       }
     }
   }
+}
+
+.form-introduction-text {
+  font-size: 80px;
+  color: $red;
 }
 
 .scene-image {
