--- a/app/views/snippets/navbar.liquid.haml
+++ b/app/views/snippets/navbar.liquid.haml
@@ -13,15 +13,15 @@
       .navbar-inner
         %ul.nav.navbar-nav{style: 'text-align: center;'}
           %li
-            %a#nav-logo{ :href => "#top" }
-              %img.img-responsive{ src: "/images/icons/reach-hearts-icon.svg " }
+            %a.scrollspyable#nav-logo{ :href => "#top" }
+              %img.img-responsive{ src: "{{ 'icons/reach-hearts-icon.svg' | theme_image_url }}" }
           %li
-            %a{ :href => "#top" } Home
+            %a.scrollspyable{ :href => "#top" } Home
           %li
-            %a{ :href => "#about-us" } About Us
+            %a.scrollspyable{ :href => "#about-us" } About Us
           %li
-            %a{ :href => "#new-media" } New Media
+            %a.scrollspyable{ :href => "#new-media" } New Media
           %li
-            %a{ :href => "#big-data" } Big Data
+            %a.scrollspyable{ :href => "#big-data" } Big Data
           %li
-            %a{ :href => "#contact" } Contact
+            %a.scrollspyable{ :href => "#contact" } Contact
